# blog-actix

./: .env  Cargo.toml  ProcFile  Procfile  RustConfig  db.sql  init.sql
client/: package-lock.json  package.json  webpack.config.js
client/sass/: index.scss
client/sass/atoms/: colors.scss
client/sass/components/: nav.scss  post.scss
client/src/: App.bs.js  App.re  Globals.re  Helpers.bs.js  Helpers.re  Index.re  Nav.bs.js  Nav.re  Post.bs.js  Post.re
migrations/2019-06-26-121415_create_posts/: up.sql
routes/: index.hbs
src/: main.rs  models.rs
src/db/: actions.rs  mod.rs  models.rs  schema.rs
src/routes/: index.rs  post.rs
static/css/: styles.css  styles.css.map
