[package]
name = "blog-actix"
version = "0.1.0"
authors = ["lastshadowpl <xeloxpl@windowslive.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "1.0"
env_logger = "0.6.1"
log = "0.4.6"
postgres = "0.15.2"
actix-files = "0.1.2"
serde_json = "1.0"
serde = "1.0.93"
diesel = { version = "1.4.6", features = ["postgres"] }
dotenv = "0.14.1"